# AI_Projects

./: README.md  pyproject.toml
Project1_Personal_Chat_Bot/: basic_agent_functions.py  personal_chat_bot.py  send_email.py  system_prompts.py
Project2_OpenAI_SDK/: llm_tools.py  models.py  openai_agents.py  sales_demo_open_ai_sdk.py  send_email.py  system_prompts.py
Project3_LangGraph/: lang_graph_demo.py  llm_graph_nodes.py  llm_tools.py  models.py  send_email.py
